--- a/css/main.css
+++ b/css/main.css
@@ -661,6 +661,23 @@ input[type=radio]:checked + .review-mark-label
     transform: translateX(-50%);
 }
 
+.error
+{
+    position: absolute;
+    z-index: 3;
+    top: 20px;
+    left: 50%;
+
+    box-sizing: border-box;
+    width: 800px;
+
+    transform: translateX(-50%);
+
+    color: white;
+    background: #ED1F54;
+    box-shadow: 10px 10px 0 rgba(0, 0, 0, .25);
+}
+
 .setup
 {
     position: absolute;
